# Django_Hotel

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
dj_drf_hotel_proj/: manage.py
dj_drf_hotel_proj/dj_drf_hotel_proj/: asgi.py  settings.py  urls.py  wsgi.py
dj_drf_hotel_proj/hotels/: admin.py  models.py  serializers.py  views.py
dj_drf_hotel_proj/hotels/migrations/: 0001_initial.py  0002_rename_rooms_room.py  0003_rename_room_id_roomreservation_room.py  0004_rename_room_roomreservation_room_id.py  0005_rename_room_id_roomreservation_room.py  0006_room_created_at_room_updated_at.py
